@@ -7,6 +7,7 @@
 
 #include "AIHistogramFactory.h"
 #include "Histogram1D.h"
+#include "DataPointSet.h"
 #include "Profile1D.h"
 #include "Tree.h"
 #include <string>
@@ -604,13 +605,13 @@ public:
    * @throws      std::runtime_error if histogram could not be created.
    */
   IHistogram1D * multiply(const std::string & path, const IHistogram1D & hist1,
-			  const IHistogram1D & hist2) {
+                          const IHistogram1D & hist2) {
     return multiply(path, dynamic_cast<const Histogram1D &>(hist1),
-		    dynamic_cast<const Histogram1D &>(hist2));
+                    dynamic_cast<const Histogram1D &>(hist2));
   }
-
+  
   /**
-   * Create n Histogram1D by dividing two Histogram1D.
+   * Create n DataPointSet by dividing two Histogram1D.
    * @param path  The path of the created IHistogram. The path must be a
    *              full path.  ("/folder1/folder2/dataName" is a valid
    *              path). The characther `/` cannot be used in names; it
@@ -620,24 +621,52 @@ public:
    * @return      The ration of the two IHistogram1D.
    * @throws      std::runtime_error if histogram could not be created.
    */
-  Histogram1D * divide(const std::string & path,
-                       const Histogram1D & h1, const Histogram1D & h2) {
+  IDataPointSet * divide(const std::string & path,
+                        const Histogram1D & h1, const Histogram1D & h2) {
     //std::cout << "!!!!!!!!!!!!" << path << std::endl;
     if ( !checkBins(h1, h2) ) return 0;
-    Histogram1D * h = new Histogram1D(h1);
+    DataPointSet * h = new DataPointSet(2);
     h->setTitle(path.substr(path.rfind('/') + 1));
-    for ( int i = 0; i < h->ax->bins() + 2; ++i ) {
+    for (int i = 0; i < h1.ax->bins()+2; ++i) {
+      //std::cout << "!!! " << 1 << i << std::endl;
+      const double binwidth = h1.ax->binWidth(i);
+      const double bincentre = ( h1.ax->binLowerEdge(i) + h1.ax->binUpperEdge(i) ) / 2.0;
+      h->addPoint();
+      IMeasurement* x = h->point(i)->coordinate(0);
+      x->setValue(bincentre);
+      x->setErrorPlus(binwidth/2.0);
+      x->setErrorMinus(binwidth/2.0);
+        
+      double yval(0), yerrup(0), yerrdown(0);
       if ( h2.sum[i] == 0 || h2.sumw[i] == 0.0 ) {
         /// @todo Bad way of handling div by zero!
-        h->sum[i] = 0;
-        h->sumw[i] = h->sumw2[i] = 0.0;
-        continue;
+        yval = 0.0;
+        yerrup = 0.0;
+        yerrdown = 0.0;
+      } else {
+        //std::cout << h1.binHeight(i) << " / " << h2.binHeight(i) << std::endl;;
+        yval = h1.binHeight(i) / h2.binHeight(i);
+        double h1val = h1.binHeight(i);
+        double h1min = h1val - h1.binRms(i);
+        double h1max = h1val + h1.binRms(i);
+        double h2val = h2.binHeight(i);
+        double h2min = h2.binHeight(i) - h2.binRms(i);
+        double h2max = h2.binHeight(i) + h2.binRms(i);
+        double h2invval = 1 / h2val;
+        double h2invmin = 1 / h2max;
+        double h2invmax = 1 / h2min;
+        yerrup = (h1val/h2val) * sqrt(pow((h1max-h1val)/h1val, 2) + pow((h2invmax-h2invval)/h2invval, 2));
+        yerrdown = (h1val/h2val) * sqrt(pow((h1val-h1min)/h1val, 2) + pow((h2invval-h2invmin)/h2invval, 2));
       }
-      h->sum[i] /= h2.sum[i];
-      h->sumw[i] /= h2.sumw[i];
-      h->sumw2[i] = h1.sumw2[i]/(h2.sumw[i]*h2.sumw[i]) +
-        h1.sumw[i]*h1.sumw[i]*h2.sumw2[i]/
-        (h2.sumw[i]*h2.sumw[i]*h2.sumw[i]*h2.sumw[i]);
+      IMeasurement* y = h->point(i)->coordinate(1);
+      y->setValue(yval);
+      y->setErrorPlus(yerrup);
+      y->setErrorMinus(yerrdown);
+      // h->sum[i] /= h2.sum[i];
+      // h->sumw[i] /= h2.sumw[i];
+      // h->sumw2[i] = h1.sumw2[i]/(h2.sumw[i]*h2.sumw[i]) +
+      //   h1.sumw[i]*h1.sumw[i]*h2.sumw2[i]/
+      //   (h2.sumw[i]*h2.sumw[i]*h2.sumw[i]*h2.sumw[i]);
     }
     //std::cout << "Inserting div histo at path: " << path << std::endl;
     if ( !tree->insert(path, h) ) return 0;
@@ -645,6 +674,9 @@ public:
     return h;
   }
 
+  #include <typeinfo>
+
+    
   /**
    * Create an IHistogram1D by dividing two IHistogram1D.
    * @param path  The path of the created IHistogram. The path must be a
@@ -656,12 +688,79 @@ public:
    * @return      The ration of the two IHistogram1D.
    * @throws      std::runtime_error if histogram could not be created.
    */
-  IHistogram1D * divide(const std::string & path, const IHistogram1D & hist1,
-			const IHistogram1D & hist2) {
-    //std::cout << "&&&&&&&&&&&&" << path << std::endl;
-    return divide(path, dynamic_cast<const Histogram1D &>(hist1),
-		    dynamic_cast<const Histogram1D &>(hist2));
+  IDataPointSet * divide(const std::string & path, 
+                         const IHistogram1D & hist1,
+                         const IHistogram1D & hist2) {
+    //std::cout << "&&&& " << path << std::endl;
+    //std::cout << typeid(hist1).name() << std::endl;
+    const Histogram1D& h1 = dynamic_cast<const Histogram1D &>(hist1);
+    //std::cout << "&&&&a " << path << std::endl;
+    const Histogram1D& h2 = dynamic_cast<const Histogram1D &>(hist2);
+    //std::cout << "&&&&b " << path << std::endl;
+    IDataPointSet* rtn = divide(path, h1, h2);
+    //std::cout << "@@@@ " << path << std::endl;
+    return rtn;
   }
+
+
+
+  // /**
+  //  * Create n Histogram1D by dividing two Histogram1D.
+  //  * @param path  The path of the created IHistogram. The path must be a
+  //  *              full path.  ("/folder1/folder2/dataName" is a valid
+  //  *              path). The characther `/` cannot be used in names; it
+  //  *              is only used to delimit directories within paths.
+  //  * @param h1    The first member of the division.
+  //  * @param h2    The second member of the division.
+  //  * @return      The ration of the two IHistogram1D.
+  //  * @throws      std::runtime_error if histogram could not be created.
+  //  */
+  // Histogram1D * divide(const std::string & path,
+  //                      const Histogram1D & h1, const Histogram1D & h2) {
+  //   //std::cout << "!!!!!!!!!!!!" << path << std::endl;
+  //   if ( !checkBins(h1, h2) ) return 0;
+  //   Histogram1D * h = new Histogram1D(h1);
+  //   h->setTitle(path.substr(path.rfind('/') + 1));
+  //   for ( int i = 0; i < h->ax->bins() + 2; ++i ) {
+  //     if ( h2.sum[i] == 0 || h2.sumw[i] == 0.0 ) {
+  //       /// @todo Bad way of handling div by zero!
+  //       h->sum[i] = 0;
+  //       h->sumw[i] = h->sumw2[i] = 0.0;
+  //       continue;
+  //     }
+  //     h->sum[i] /= h2.sum[i];
+  //     h->sumw[i] /= h2.sumw[i];
+  //     h->sumw2[i] = h1.sumw2[i]/(h2.sumw[i]*h2.sumw[i]) +
+  //       h1.sumw[i]*h1.sumw[i]*h2.sumw2[i]/
+  //       (h2.sumw[i]*h2.sumw[i]*h2.sumw[i]*h2.sumw[i]);
+  //   }
+  //   //std::cout << "Inserting div histo at path: " << path << std::endl;
+  //   if ( !tree->insert(path, h) ) return 0;
+  //   //std::cout << "** OK!" << std::endl;
+  //   return h;
+  // }
+
+  // /**
+  //  * Create an IHistogram1D by dividing two IHistogram1D.
+  //  * @param path  The path of the created IHistogram. The path must be a
+  //  *              full path.  ("/folder1/folder2/dataName" is a valid
+  //  *              path). The characther `/` cannot be used in names; it
+  //  *              is only used to delimit directories within paths.
+  //  * @param hist1 The first member of the division.
+  //  * @param hist2 The second member of the division.
+  //  * @return      The ration of the two IHistogram1D.
+  //  * @throws      std::runtime_error if histogram could not be created.
+  //  */
+  // IHistogram1D * divide(const std::string & path, const IHistogram1D & hist1,
+  //   		const IHistogram1D & hist2) {
+  //   //std::cout << "&&&&&&&&&&&&" << path << std::endl;
+  //   return divide(path, dynamic_cast<const Histogram1D &>(hist1),
+  //   	    dynamic_cast<const Histogram1D &>(hist2));
+  // }
+
+
+
+
 
   inline bool _neq(double a, double b, double eps = 1e-5) const {
     if (a == 0 && b == 0) return false;
